--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "projectname",
-  "author": "ORGNAME",
+  "author": "enzodiazdev",
   "description": "PROJECTDESCRIPTION",
   "version": "1.0.0",
   "license": "MIT",
   "keywords": [
-    "PROJECTNAME"
+    "AdventureMaker"
   ],
   "main": "dist/Main.js",
   "engines": {
@@ -23,43 +23,45 @@
     "test:coverage": "jest --config jest.config.json --coverage",
     "format": "eslint --fix --ext .ts ./src"
   },
-  "homepage": "https://github.com/ORGNAME/PROJECTNAME#readme",
+  "homepage": "https://github.com/enzodiazdev/AdventureMaker#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ORGNAME/PROJECTNAME.git",
-    "directory": "PROJECTNAME"
+    "url": "git+https://github.com/enzodiazdev/AdventureMaker.git",
+    "directory": "AdventureMaker"
   },
   "bugs": {
-    "url": "https://github.com/ORGNAME/PROJECTNAME/issues",
+    "url": "https://github.com/enzodiazdev/AdventureMaker/issues",
     "email": "sendto@email.com"
-  },
-  "dependencies": {
-    "pino": "^8.16.2",
-    "reflect-metadata": "^0.1.13"
-  },
-  "devDependencies": {
-    "@casualbot/jest-sonar-reporter": "^2.3.1",
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.9.4",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.54.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "pino-pretty": "^10.2.3",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.8",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.2"
   },
   "config": {
     "engine-strict": true
+  },
+  "devDependencies": {
+    "@casualbot/jest-sonar-reporter": "^2.3.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^46.9.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "pino-pretty": "^10.3.1",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "mongodb": "^5.9.2",
+    "pino": "^8.17.2",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.17"
   }
 }
