--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "projectname",
+  "name": "adventuremaker",
   "author": "enzodiazdev",
-  "description": "PROJECTDESCRIPTION",
+  "description": "...",
   "version": "1.0.0",
   "license": "MIT",
   "keywords": [
