--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "discord.js": "^14.14.1",
     "mongodb": "^5.9.2",
     "pino": "^8.17.2",
     "reflect-metadata": "^0.2.1",
