--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=AdventureMaker
+sonar.projectKey=adveture_ia
 sonar.organization=enzodiazdev
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=AdventureMaker
+sonar.projectName=adveture_ia
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
